--- a/reports/rag_experimentation_report.Rmd
+++ b/reports/rag_experimentation_report.Rmd
@@ -55,172 +55,160 @@ One of the main features of this implementation is its ability to customize resp
 The inputs consist of domain-specific documentation split into chunks and stored in a vector database. 
 The system can answer factual questions about technical specifications, processes, and concepts contained within the corpus.
 
-## Related Work
+# Key Findings
 
-RAG systems have been explored in several recent studies. [@gao2023retrieval] demonstrated improvements in factual accuracy, while [@izacard2022atlas] extended RAG approaches to longer contexts. [@ram2023incontext] showed how in-context learning can enhance retrieval performance, and [@shi2023replug] explored modular approaches to RAG system design.
+- Template Engineering Matters Most: The engineering vs. marketing query template had a more significant impact on performance than embedding model selection, with engineering templates consistently outperforming marketing ones across all configurations. Notably, the engineering template consistently outperformed the marketing template, which I attribute to the nature of the RAG corpus and evaluation corpus being fundamentally biased towards technical content (i.e., the marketing template has the added challenge of needing to summarize/translate technical material for a non-technical audience, whereas this is not as much a requirement for the engineering audience). 
 
-My work builds upon these foundations by providing a more systematic evaluation of configuration choices and their interactions, with a focus on practical implementation concerns.
+- Chunking Parameters: A chunk size of 1024 tokens with 100 token overlap provided the best balance between context preservation and retrieval precision, with context relevance showing a strong correlation ($R^2 \approx 0.70$) to these parameters.
+
+- Retriever Strategy: Similarity-based retrieval with top-k=8 consistently outperformed other strategies, while high similarity thresholds (0.8+) often retrieved nothing and collapsed performance, demonstrating that retriever method selection significantly impacts evaluation metrics ($R^2 \approx 0.4-0.6$).
+
+-Embedding Model Performance: While multi-qa-mpnet-base-cos-v1 was technically the best performing embedding model for both engineering and marketing contexts, differences between embedding models were statistically insignificant. This could likely be overcome with a larger evaluation QA corpus, as well as repeated iterations of experiments to increase the draw pool for the random distribution. LangSmith specifically provides an argument for evaluating (and normalizing) metric outcomes against multiple runs, but this drives up the cost linearly.
+
+- Evaluation Metric Sensitivity: Different evaluation metrics showed varying sensitivities to parameter changes, with DeepEval faithfulness being extremely sensitive to retriever method changes, making it an effective signal for optimizing RAG systems.
+
+
 
 # Methodology
 
-## Experimental Design
+## Technical Approach
+The implementation followed a phased approach to systematically explore different aspects of the RAG pipeline:
 
-I designed a multi-phased experimental approach to evaluate RAG performance:
+### Phase 1: Embedding Model Selection
+I tested five embedding models (all-mpnet-base-v2, all-MiniLM-L6-v2, all-distilroberta-v1, multi-qa-mpnet-base-cos-v1, multi-qa-mpnet-base-dot-v1) while keeping other parameters constant.
+This phase established the foundation for subsequent experiments by identifying the most effective semantic representation for the corpus.
 
-1. **Phase 1:** Initial exploration of embedding models and basic retrieval configurations
-2. **Phase 2:** Parameter optimization focused on chunk sizes, overlaps, and top-k values
-3. **Phase 3:** Fine-tuning of retrieval strategies with advanced techniques (MMR, similarity thresholds)
+This embedding-first approach was deliberate as it determines how documents are represented in vector space, fundamentally constraining all downstream retrieval performance.
+Since switching embedding models requires re-embedding the entire corpus (making it computationally expensive), identifying the best model early allowed me to focus subsequent phases on parameter optimization. (Though, in reality, this last point is a bit of a principled stance given how small the RAG corpus actually was).
 
-Each phase built upon insights from previous phases, allowing for progressive refinement of my understanding.
+### Phase 2: Chunking Parameter Optimization
+Using the best-performing embedding model from Phase 1, I explored variations in chunk size (256, 512, 1024, 2048) and chunk overlap (0, 50, 100) to determine the optimal document segmentation strategy.
+These parameters directly influence what information is captured in each vector, affecting both retrieval precision and the context provided to the LLM.
 
-### Rationale for Phased Approach
+### Phase 3: Retrieval Strategy Refinement
+With optimized embeddings and chunking in place, I experimented with advanced retrieval techniques including similarity-based retrieval with various top-k values (4, 8, 12), Maximum Marginal Relevance (MMR), and similarity score thresholding at different levels (0.5, 0.8).
+These strategies operate on the already-embedded documents and don't require reprocessing the corpus.
 
-This phased experimental design follows a logical dependency chain in the RAG pipeline architecture. The sequential nature of my experiments was deliberate and grounded in both theoretical and practical considerations.
+For audience customization (i.e., engineering vs marketing), I implemented two distinct query templates:
 
-**Embedding Models First (Phase 1):** The embedding model serves as the foundation of any retrieval system, as it determines how documents are represented in the vector space. I prioritized this exploration first because the quality of embeddings fundamentally constrains all downstream retrieval performance. Different embedding models capture semantic relationships differently. By testing various models, I could identify which ones best understood the nuances of the RAG corpus. Furthermore, switching embedding models requires re-embedding the entire corpus, making this the most computationally expensive component to change (though that's more of a principled stance given that the RAG corpus we're working with is small enough to rip and replace each time). By identifying the best-performing embedding models early, I could focus subsequent phases on optimizing parameters within this established foundation, rather than having to repeat experiments across multiple embedding models.
+- Engineering template: Emphasizes technical language with precise terminology, focused on accuracy and comprehensiveness
+- Marketing template: Emphasizes conversational language with simplified terminology, focused on clarity and accessibility
 
-**Chunking Parameters Second (Phase 2):** Once I found the best-performing embedding models, I moved on to optimize chunking and retrieval parameters. Chunk size and overlap directly influence what information is captured in each vector, affecting both retrieval precision and the context provided to the LLM. These parameters interact with the embedding model's capabilities, particularly regarding context window limitations. Small chunks might lose important contextual information, while overly large chunks might dilute the semantic focus of the vector representations. The granularity of chunks determines whether related information is kept together or split across multiple vectors, potentially fragmenting important concepts. While optimizing these parameters is less computationally intensive than changing embedding models, it still requires reprocessing the entire corpus, making it logical to place this optimization after embedding model selection but before retrieval strategy refinement.
+The template selection adjusts how the system frames questions to the retrieval component, leading to different context selection and ultimately tailored responses for different audience needs.
 
-**Retrieval Strategies Last (Phase 3):** With optimized representations and chunking in place, I finally experimented with advanced retrieval techniques. These strategies operate on the already-embedded documents and don't require reprocessing the corpus, making them the most flexible component to experiment with. Their effectiveness depends heavily on having high-quality embeddings and appropriate chunking established in the previous phases. Techniques like Maximum Marginal Relevance (MMR) address diversity in retrieved results, while similarity thresholds help filter out marginally relevant documents. Because these techniques can be rapidly tested and compared without rebuilding the vector database, placing this exploration last allowed for efficient fine-tuning after the more foundational components were optimized.
 
-This dependency-based approach follows the natural flow of information in a RAG system from document representation to retrieval optimization. It also optimizes experimental efficiency by addressing the most foundational and computationally expensive components first, progressively moving toward components that can be adjusted with less overhead. This methodology enabled me to build upon insights from each phase, creating a more robust understanding of how different components interact within the RAG pipeline.
+# Testing and Evaluation
 
-## Dataset
+I evaluated system performance using 13 distinct metrics across three categories:
 
-My experiments utilized a domain-specific dataset consisting of:
+- Simple Metrics (Binary LLM-as-judge):
 
-- Engineering documentation
-- Marketing materials
-- Technical specifications
+  - Groundedness: Is the RAG response factually consistent with the provided context?
+  - Retrieval Relevance: Are the retrieved documents pertinent to the question?
+  - Relevance: Is the answer relevant to the question?
+  - Correctness: Is the answer in agreement with the reference ground truth?
 
-I prepared a set of validation questions with expert-generated ground truth answers to evaluate system performance. The dataset was processed into suitable formats for vector database storage and retrieval.
+These metrics were implemented manually, by me, following a tutorial from LangChain's documentation.
 
-## Evaluation Metrics
+- RAGAS Metrics (Normalized LLM-as-judge):
 
-I used 13 metrics to evaluate RAG performance.
+  - Faithfulness: Equivalent to Groundedness (above) but with gradation
+  - Context Relevance: Equivalent to Retrieved Relevance (above).
+  - Response Relevance: Equivalent to Relevance (above).
+  - Answer Accuracy: Equivalent to Correctness (above), but with gradation.
 
-- Simple: Groundedness
-- Simple: Retrieval Relevance
-- Simple: Relevance
-- Simple: Correctness
-- RAGAS: Faithfulness
-- RAGAS: Context Relevance
-- RAGAS: Response Relevance
-- RAGAS: Answer Accuracy
-- DeepEval: G-Eval
-- DeepEval: Faithfulness (RAG Hallucination)
-- Heuristic: BERTScore
-- Heuristic: Word count
-- Heuristic: Character count
+- Additional Metrics:
 
-The four simple evaluations measured the same things as the four RAGAS metrics:
+  - DeepEval G-Eval: Framework using LLM-as-judge with chain-of-thought
+  - DeepEval Faithfulness: Measures hallucination in RAG systems
+  - BERTScore: Semantic similarity between response and reference
+  - Word count and character count: Heuristic length metrics
 
-- Simple Groundedness == RAGAS Faithfulness
-- Simple Retrieval Relevance == RAGAS Context Relevance
-- Simple Relevance == RAGAS Response Relevance
-- Simple Correctness == RAGAS Answer Accuracy
+Testing was conducted on a set of 78 domain-specific questions with reference answers. Each experimental configuration processed all questions, and results were analyzed for statistical significance using ANOVA and regression analysis to determine which differences were meaningful rather than due to chance.
 
-{insert diagram}
+I intentionally used multiple overlapping metrics to cross-validate findings. For example, both simple groundedness and RAGAS faithfulness measure the same concept but with different methodologies, providing complementary perspectives on performance. However, the Simple Metrics can largely be ignored, as they were far less robust in their evaluation strategy than their RAGAS counterparts. For example, Correctness uses an LLM-as-a-judge to produce a binary score as to whether the produced output is in agreement with the reference answer. RAGAS Answer Accuracy does the same thing, but does two independent passes through the judge, requesting each to produce a score from 0 to 2, then normalizes both, resulting in (intuitively) a more accurate score, as the former is binary, whereas the former counts in units of 0.25, resulting in more stable means across the full evaluation set. The key purpose of the simple approach was to see if comparable results could be achieved using fewer judge calls, thus resulting in financial savings. This was not the case, and I abandoned the simple metrics after phase 1.
 
-## Implementation Details
 
-My RAG pipeline implementation consisted of:
 
-1. **Vector Database:** Qdrant for storage and retrieval of embedded documents
-2. **Embedding Models:** Multiple models including Cohere embeddings and MPNet-based models
-3. **Retrieval Strategies:** Basic similarity search, MMR, and threshold-based filtering
-4. **LLM Integration:** [Details of LLM used for generation]
+# Results and Findings
 
-```{r methodology-diagram, echo=FALSE, fig.cap="Overview of the experimental RAG pipeline architecture"}
-# Code to include architecture diagram
-```
+## Proof of Concept Functionality
+The RAG system successfully demonstrated the ability to answer domain-specific questions with high factual accuracy. Key performance characteristics include:
 
-# Experimental Results
+- Embedding Model Performance:
+  Despite testing various models, statistical analysis revealed minimal significant differences between embedding models (only about 5% of comparisons showed statistical significance). Multi-qa-mpnet-base-cos-v1 performed marginally better, but the difference was within statistical noise, suggesting embedding model selection is less critical than other parameters.
 
-## Phase 1: Initial Model Exploration
+- Chunking Parameter Impact:
+  The chunk size and overlap had a substantial impact on performance metrics:
+  - Chunk size of 1024 with overlap of 100 consistently produced the best results
+  - Ragas Context Relevance showed a strong correlation to chunk parameters ($R^2 \approx 0.70$)
+  - Ragas Faithfulness (Hallucination for RAG) showed a moderate correlation ($R%2 \approx 0.29$)
+  - Larger chunks with more overlap improved context relevance by keeping related information together
 
-In the first phase, I evaluated [number] RAG configurations with varying embedding models while keeping other parameters constant.
+- Retrieval Strategy Effects:
+  Retrieval method selection demonstrated the most pronounced impact on performance:
+    - Similarity with top-k=8 was the overall best performer
+    - MMR provided more diverse but sometimes less precise results
+    - Similarity score thresholding at 0.8 usually retrieved nothing, causing performance collapse
+    - DeepEval faithfulness was extremely sensitive to retriever changes
 
-```{r phase1-results}
-```
+- Team Type Influence:
+  The engineering template consistently outperformed the marketing template across all configurations, with the largest effect size (d=0.70) observed for relevance metrics. This suggests that how questions are framed significantly impacts retrieval quality.
 
-Table \ref{tab:phase1} presents the key metrics for the top-performing configurations from Phase 1.
+- System Performance:
+  The Cohere implementation used approximately 1330 MB of memory with response times averaging 2-5 seconds. Non-LLM components (vector retrieval) completed in about 0.25 seconds, indicating that most latency came from the LLM generation phase rather than retrieval operations.
 
-```{r phase1-table}
-```
 
-## Phase 2: Parameter Optimization
+# Lessons Learned
 
-Based on Phase 1 results, I selected the top-performing embedding models and explored variations in chunk size, context window, and retrieval parameters.
+Technical Insights:
 
-```{r phase2-results}
-```
+1. Parameter Interaction: Chunk size and retrieval strategy interact synergistically - larger chunks benefit from higher top-k values to maintain diversity of information.
+2. Metric Reliability: DeepEval's G-Eval showed strong correlation with human judgment, making it a reliable indicator of system quality.
+3. Statistical Significance: Many observed differences between configurations were within statistical noise, highlighting the importance of rigorous evaluation rather than relying on raw scores.
 
-Figure \ref{fig:chunk-size} illustrates the relationship between chunk size and overall performance.
+Non-Technical Insights:
 
-```{r chunk-size-impact, fig.cap="Impact of chunk size on RAG performance metrics"}
-```
+1. Template Design Impact: How questions are formulated dramatically affects retrieval quality, with engineering/technical phrasings yielding better performance.
+2. Evaluation Trade-offs: Different metrics emphasized different aspects of performance, revealing the multi-faceted nature of "good" RAG systems.
+3. Audience Adaptation: The system could effectively tailor responses to different audiences, though engineering templates consistently retrieved better context regardless of audience.
 
-## Phase 3: Advanced Retrieval Strategies
 
-In the final phase, I evaluated retrieval techniques including Maximum Marginal Relevance (MMR) and similarity score thresholding.
+# Challenges and Limitations
 
-```{r phase3-results}
-```
+Several limitations emerged during experimentation:
 
-## System Performance
+- Metric Inconsistency: Different evaluation metrics sometimes yielded contradictory results, making it difficult to determine a single "best" configuration. For example, DeepEval faithfulness consistently scored systems highly (95th percentile) while RAGAS faithfulness was harsh.
+- LLM Evaluation Subjectivity: Using LLMs-as-judges introduced potential biases and inconsistencies in evaluation, as they may favor certain response patterns or writing styles.
+- Statistical Power: While conducting experiments with 78 questions per configuration, many observed differences were not statistically significant, suggesting either more test questions or more pronounced parameter adjustments would be needed for definitive conclusions.
+- Latent Knowledge Effects: It was difficult to determine whether factual accuracy came from the retrieval component or from the LLM's pre-existing knowledge, presenting challenges for attribution of performance gains.
+- Resource Constraints: The full factorial design across all parameters would have required thousands of experimental runs, necessitating a phased approach that may have missed optimal combinations across phase boundaries.
+- Price: These evaluations sometimes require 3 or more calls to an LLM judge, racking up potentially hundreds of dollars of API calls. I spent over $300 on calls to gpt4o for this project. Storing them in LangSmith for evaluation cost money. Renting a VM with access to a T4 cost money. Making calls to Cohere cost money. Overall, these evaluations are very expensive to run if you lack the requisite hardware to self-host the LLM judges used to produce the evaluation scores.
+- Underpowered hardware: Running Mistral on a T4 GPU yielded exceptionally poor performance results. A typical pipeline call with self-hosted Mistral took about 24 seconds, while an equivalent Cohere call took only 2-3 seconds. This is in spite of the inherit disadvantage Cohere has with its implicit network barrier. I attribute this to the T4 GPU being insufficiently capable from a computing perspective to host Mistral and conduct such exhaustive evaluations.
 
-A single execution of the RAG system with Cohere utilizes approximately 1330 MB of memory. This relatively modest footprint stems from Cohere being an externally hosted LLM, while QDrant runs in-memory with a limited document corpus.
-The RAG system demonstrates efficient memory management, as it does not accumulate memory usage with successive query inputs. This efficiency occurs because inference latents are not retained between executions.
-CPU utilization remains consistently negligible (0% or minimal values) as the RAG system operates primarily on the GPU via CUDA or MPS acceleration.
+With additional time and resources, several promising directions could be explored:
 
-GPU monitoring logs reveal significant utilization patterns during model inference, with peak usage ranging from 38% to 99% depending on query complexity. These utilization spikes occur specifically during response generation rather than vector retrieval. GPU memory consumption remains relatively stable at approximately 39% throughout the process, indicating that while the model heavily utilizes computational resources during inference, memory requirements maintain consistency.
-The Mistral implementation consumes substantially more computational resources than Cohere because it operates in a self-hosted environment. This constraint led to primarily testing with Cohere, particularly as no significant quality differences were observed between the two LLM outputs.
+- Hybrid Retrieval Strategies: Combining MMR for diversity with similarity-based filtering could potentially yield better results than either approach alone.
+- Parameter Fine-Tuning: More granular exploration of chunk sizes between 512-2048 and overlap percentages could identify more precise optimal values.
+- Prompt Engineering Optimization: Systematic evaluation of different prompt structures for both retrieval and generation could further enhance performance.
+- Cross-Domain Testing: Evaluating the best configurations on different document types and domains would test the generalizability of findings.
+- LLM Comparison: Comparing performance across different foundation models (e.g., Mistral, Claude, GPT-4) would help isolate the effects of the retrieval component versus the LLM capabilities.
 
-Regarding response times, Cohere averaged between 2.00s and 5.00s. Interestingly, despite reduced network latency, Mistral demonstrated inferior performance, with a P50 latency of approximately 42.61 seconds on a 10-question evaluation set. Analysis of the execution trace shows that non-LLM components of the RAG system (e.g., vector store retrieval) consistently completed in approximately 0.25 seconds, contributing less than 0.35 seconds to the total response time. This performance disparity likely stems from the Mistral LLM running on underpowered hardware, resulting in suboptimal inference times.
 
-This comparison necessarily involves different computational paradigms, as Cohere's command-r model operates on highly optimized infrastructure that effectively mitigates the inherent network latency disadvantage compared to locally hosted models.
+# Summary & Recommendations
 
-# Analysis and Discussion
+Based on the experimental results, I recommend implementing a production RAG system with the following configuration:
 
-## Top-Performing Configurations
+  - Embedding Model: multi-qa-mpnet-base-cos-v1
+  - Chunk Size: 1024 tokens
+  - Chunk Overlap: 100 tokens
+  - Retrieval Strategy: Similarity-based with top-k=8
+  - Query Template: Engineering-focused template, even for non-technical users
 
-My experiments revealed several consistently high-performing configurations:
+This configuration consistently delivered the best overall performance across metrics and demonstrated robust behavior across different question types. The engineering template's superior performance suggests that technical precision in question formulation benefits retrieval quality, even when the final response will be adapted for non-technical audiences.
 
-```{r top-performers}
-```
+The system's modest resource requirements (1330 MB memory, 2-5 second response time) make it viable for production deployment with minimal infrastructure. 
+The fact that vector retrieval comprises only a small portion of the overall latency (0.25 seconds) suggests that optimization efforts should focus on LLM inference rather than retrieval operations.
 
-The optimal configuration achieved [X%] improvement over baseline approaches, with particularly strong performance in [specific metrics].
-
-## Parameter Sensitivity Analysis
-
-I identified several key parameters with significant impact on RAG performance:
-
-1. **Chunk Size:** [Findings about optimal chunk size]
-2. **Context Window:** [Findings about context window utilization]
-3. **Top-k Retrieval:** [Findings about optimal k values]
-
-## Embedding Model Comparison
-
-analysis of embedding models:
-
-```{r embedding-comparison}
-```
-
-## Trade-offs and Optimization Strategies
-
-I observed several important trade-offs in RAG system design:
-
-1. **Quality vs. Latency:** [Discussion of performance trade-offs]
-2. **Retrieval Precision vs. Recall:** [Analysis of precision-recall trade-offs]
-3. **Computational Resources:** [Discussion of resource requirements]
-
-# Conclusion
-
-## Limitations
-
-## Future Work
-
-# References
-
-<!-- References generated from the .bib file -->
+For future development, establishing a continuous evaluation pipeline would enable ongoing refinement as document collections grow and query patterns evolve. 
+The significant impact of template design also suggests that A/B testing different query formulations could yield substantial performance improvements with minimal implementation costs.
