--- a/reports/rag_experimentation_report.Rmd
+++ b/reports/rag_experimentation_report.Rmd
@@ -68,42 +68,29 @@ The system can answer factual questions about technical specifications, processe
 - Evaluation Metric Sensitivity: Different evaluation metrics showed varying sensitivities to parameter changes, with DeepEval faithfulness being extremely sensitive to retriever method changes, making it an effective signal for optimizing RAG systems.
 
 
-
 # Methodology
 
 ## Technical Approach
-The implementation followed a phased approach to systematically explore different aspects of the RAG pipeline:
 
-### Phase 1: Embedding Model Selection
-I tested five embedding models (all-mpnet-base-v2, all-MiniLM-L6-v2, all-distilroberta-v1, multi-qa-mpnet-base-cos-v1, multi-qa-mpnet-base-dot-v1) while keeping other parameters constant. This phase established the foundation for subsequent experiments by identifying the most effective semantic representation for the corpus.
+The implementation followed a phased approach to systematically explore different aspects of the RAG pipeline. The research methodology was designed to isolate and evaluate key performance factors while maintaining experimental control.
 
-This embedding-first approach was deliberate as it determines how documents are represented in vector space, fundamentally constraining all downstream retrieval performance. Since switching embedding models requires re-embedding the entire corpus (making it computationally expensive), identifying the best model early allowed me to focus subsequent phases on parameter optimization. (Though, in reality, this last point is a bit of a principled stance given how small the RAG corpus actually was).
+In the first phase focused on embedding model selection, I tested five embedding models (all-mpnet-base-v2, all-MiniLM-L6-v2, all-distilroberta-v1, multi-qa-mpnet-base-cos-v1, and multi-qa-mpnet-base-dot-v1) while keeping other parameters constant. This established the foundation for subsequent experiments by identifying the most effective semantic representation for the corpus. The embedding-first approach was deliberate as it determines how documents are represented in vector space, fundamentally constraining all downstream retrieval performance. Since switching embedding models requires re-embedding the entire corpus—making it computationally expensive—identifying the best model early allowed me to focus subsequent phases on parameter optimization. Though in reality, this principled stance was somewhat academic given the relatively small size of the RAG corpus used in the experiments.
 
-### Phase 2: Chunking Parameter Optimization
-Using the best-performing embedding model from Phase 1, I explored variations in chunk size (256, 512, 1024, 2048) and chunk overlap (0, 50, 100) to determine the optimal document segmentation strategy. These parameters directly influence what information is captured in each vector, affecting both retrieval precision and the context provided to the LLM.
+The second phase concentrated on chunking parameter optimization. Using the best-performing embedding model identified in Phase 1, I explored variations in chunk size (256, 512, 1024, 2048 tokens) and chunk overlap (0, 50, 100 tokens) to determine the optimal document segmentation strategy. These parameters directly influence what information is captured in each vector, affecting both retrieval precision and the context provided to the LLM. Document chunking represents a critical balance between granularity and coherence—too small chunks may lose important contextual connections, while too large chunks might dilute relevance signals with unrelated information.
 
-### Phase 3: Retrieval Strategy Refinement
-With optimized embeddings and chunking in place, I experimented with advanced retrieval techniques including similarity-based retrieval with various top-k values (4, 8, 12), Maximum Marginal Relevance (MMR), and similarity score thresholding at different levels (0.5, 0.8).
-These strategies operate on the already-embedded documents and don't require reprocessing the corpus.
+With optimized embeddings and chunking parameters established, the third phase involved retrieval strategy refinement. I experimented with advanced retrieval techniques including similarity-based retrieval with various top-k values (4, 8, 12), Maximum Marginal Relevance (MMR) for diversity enhancement, and similarity score thresholding at different levels (0.5, 0.8). These strategies operate on the already-embedded documents and don't require reprocessing the corpus, making them computationally efficient to test at scale across the evaluation set.
 
-For audience customization (i.e., engineering vs marketing), I implemented two a query template for each team:
+For catering to the two different teams, I implemented distinct query templates. The engineering template emphasized technical language with precise terminology, focusing on accuracy and comprehensiveness appropriate for technical audiences. In contrast, the marketing template employed conversational language with simplified terminology, prioritizing clarity and accessibility for non-technical users. The template selection adjusts how the system frames questions to the retrieval component, leading to different context selection and ultimately tailored responses for different audience needs. This allowed for testing whether RAG systems could effectively adapt to different communication contexts while maintaining factual accuracy. I experimented with 4 and 3 templates for engineering and marketing, respectively, evaluating the RAG output by hand, until I was satisifed with the output. The final templates were used for all experiments.
 
-- Engineering template: Emphasizes technical language with precise terminology, focused on accuracy and comprehensiveness
-- Marketing template: Emphasizes conversational language with simplified terminology, focused on clarity and accessibility
+## Evaluation Process
 
-The template selection adjusts how the system frames questions to the retrieval component, leading to different context selection and ultimately tailored responses for different audience needs.
+I used LangSmith to log and analyze all evaluation results throughout the experimental process. The evaluation workflow followed a structured approach to ensure comprehensive and reproducible results.
 
-In addition, I used LangSmith to log all results. Here was the general process:
+The process began with running the `run_phased_evaluations.py` script, which orchestrated the evaluation of all 78 questions in the validation set against the specified evaluation metrics. This script logged all runs and traces to LangSmith, providing a detailed record of each evaluation step. Each question generated a trace that broke down each sub-step of the pipeline, including retrieval time from the vector store, which documents were retrieved, and the final templated input before processing through the RAG system's LLM. This detailed tracing enabled thorough analysis of where different configurations succeeded or failed.
 
-Run the `run_phased_evaluations.py` script to orchestrate to evaluate all 78 questions of the validation set against any of the specified evaluation metrics.
+In addition to LangSmith logging, the script recorded all runs to local JSON files for offline analysis. This redundancy ensured data preservation and allowed for custom analysis approaches beyond what LangSmith natively offers. After completing the evaluations, I analyzed the results using a custom script, `analyze_top_performers.py`, which identified the top-performing RAG system configurations based on an un-weighted, normalized aggregate of all relevant evaluation metrics. This script produced rankings of configurations and highlighted performance patterns across different parameter combinations. For future work, I would implement a weighting mechanism to give preference to evaluation metrics deemed more important by researchers for specific use cases.
 
-The phased evaluations script logs all runs and traces to LangSmith to make it easy to browse the results. Each question has a trace which breaks down each sub-step of the pipeline, including how long it took to retrieve documents from the vector store, which documents were retrieved, and what the final templated input was before running it through the RAG system's LLM. 
-
-The phased evaluation script also logs all runs to file, recording them in JSON files for local analysis.
-
-Next, I would analyze the phased evaluation results using another script, `analyze_top_performers.py`, which would identify the top performing RAG system configuration based on an unweighted, normalized aggregate of all relevant evaluation metrics. In the future, I would like to implement a weighting mechanism to give more preference to evaluation metrics that the researcher values more.
-
-Lastly, I would run a statistical analysis on the results using another script, `analyze_statistical_significance.py`, to ensure that the findings were significantly signifiant, and to better understand the effect size; additionally, I ran regressions to identify whether any of the independent variables were collinear with any of the evaluation metrics.
+The final step involved running statistical analysis using the `analyze_statistical_significance.py` script. This ensured that the findings were statistically significant and helped quantify effect sizes for different parameter changes. Additionally, I conducted regression analyses to identify correlations between independent variables and evaluation metrics, which revealed important relationships between configuration choices and performance outcomes.
 
 ## Testing and Evaluation
 
@@ -132,7 +119,7 @@ These metrics were implemented manually, by me, following a tutorial from LangCh
   - BERTScore: Semantic similarity between response and reference
   - Word count and character count: Heuristic length metrics comparing hte actual output to the reference output
 
-Testing was conducted on a set of 78 domain-specific questions with reference answers. Each experimental configuration processed all questions, with results analyzed for statistical significance using ANOVA and regression analysis to determine which differences were meaningful rather than due to chance. For all LLM-as-judge evaluations (10 of the 13 metrics), I used GPT-4o as the judge model.
+Testing was conducted on a set of 78 domain-specific questions with reference answers. Each experimental configuration processed all questions, with results analyzed for statistical significance using ANOVA tests (producing F-values and p-values), pairwise t-tests between configurations, and regression analyses to determine correlations between parameters and performance metrics. For all ANOVA tests, I simulated approximate data distributions using the mean and standard deviation from each configuration and analyzed whether the observed differences between configurations were statistically significant at the p<0.05 level. Pairwise t-tests were conducted using Welch's method for unequal variances to identify which specific pairs of configurations differed significantly. Regression analyses helped quantify the relationship between configuration parameters (e.g., chunk size, overlap) and performance metrics, producing R² values to measure the strength of these relationships. For all LLM-as-judge evaluations (10 of the 13 metrics), I used GPT-4o as the judge model.
 
 I intentionally used overlapping metrics to cross-validate findings. The Simple Metrics and RAGAS Metrics measure similar concepts but differ in methodology. The Simple Metrics use a single inference request per question-answer pair to produce binary scores, while RAGAS metrics typically involve at least two inference calls. For example, while Simple Correctness produces a binary score about agreement with the reference answer, RAGAS Answer Accuracy performs two independent judge passes with scores from 0 to 2, then normalizes them to produce increments of 0.25. This results in more stable means across the full evaluation set.
 
